test-cases/negative/test_133_continue_in_wrong_place.lay
# negative test: continue statement outside loop
# expected: parser should reject this

if true then
  continue
end if


